# is-archived

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go  mod.json
pkg/check/: common.go
pkg/cratesio/: api.go  api_test.go  cargo.go  cargo_test.go  check.go
pkg/cratesio/testdata/: Cargo.toml  aarch64-esr-decoder.crate.json  page1.crates.json
pkg/forgejo/: doc.go
pkg/forgejo/testdata/: forgejo.json
pkg/gh/: archived.go
pkg/golang/: mod.go
pkg/npm/: api.go  api_test.go  check.go  check_test.go  load.go  type.go  type_test.go
pkg/npm/testdata/: package.json
pkg/pypi/: check.go
pkg/pypi/testdata/: requirements.txt
pkg/types/: packager.go  repoer.go
pkg/vcs/: discovery.go  discovery_test.go  x_test.go
version/: version.go
